--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
-@import "bootstrap/scss/bootstrap";
+@use "bootstrap/scss/bootstrap";
+
 
 //variable
 $primary: #27c2ad;
@@ -202,11 +203,9 @@ p  { font-size: 16px; line-height: 1.6; color: $text-muted; margin-bottom: 16px;
   small { font-size: 11px; }
   br { display: none; }
 }
-
+@import "bootstrap/scss/bootstrap";
 @import "./navbar";
 @import "./hero";
 @import "./offers";
 @import "./testimonials";
-@import "./AboutUs";
-@import "./newsletter";
-@import "./footer";
+
